# Federated_learning_on_medical_imaging_pathMNIST

./: README.md  pyproject.toml
src/: client_app.py  load_data.py  loss_function.py  model.py  server_app.py  task.py
